# easyvideo

./: .gitignore  README.md
actix_back_end/: Cargo.toml
actix_back_end/src/: main.rs  models.rs  schema.rs  views.rs
flask_back_end/: __init__.py  models.py  requirements.txt  settings.py  uitls.py  views.py
front_end/: package-lock.json  package.json
front_end/src/: App.vue  main.ts  store.ts
front_end/src/components/: Home.vue  Manage.vue  PlayVideo.vue  Tags.vue  Upload.vue
front_end/src/hooks/: utils.ts
gin_back_end/: go.mod  main.go
gin_back_end/models/: models.go
gin_back_end/routers/: routers.go
gin_back_end/settings/: settings.go
go_kit_back_end/: go.mod  go.sum
go_kit_back_end/common/: config.go
go_kit_back_end/tag/cmd/: main.go
go_kit_back_end/tag/cmd/cli/: cli.go
go_kit_back_end/tag/cmd/service/: service.go
go_kit_back_end/tag/config/: config.go
go_kit_back_end/tag/dao/: model.go
go_kit_back_end/tag/endpoint/: endpoint.go
go_kit_back_end/tag/pb/: tag.pb.go  tag.proto  tag_grpc.pb.go
go_kit_back_end/tag/rds/: model.go  rds.go  tag.go  video_tag.go
go_kit_back_end/tag/service/: service.go
go_kit_back_end/tag/transport/: grpc.go  http.go
go_kit_back_end/video/: main.go
go_kit_back_end/video/cmd/: main.go
go_kit_back_end/video/cmd/service/: service.go
go_kit_back_end/video/config/: config.go
go_kit_back_end/video/endpoint/: endpoint.go
go_kit_back_end/video/rds/: model.go  rds.go  video.go
go_kit_back_end/video/service/: service.go
go_kit_back_end/video/transport/: http.go
