[package]
name = "actix_back_end"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.6", features = ["mysql", "r2d2"] }
env_logger = "0.8"
failure = "0.1.8"
futures = "0.3"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.5"
mime = "0.3.16"
actix-cors = "0.5"
